# coverage-rasterizer

./: CMakeLists.txt  README.md
include/: coverage_rasterizer.h
src/: coverage_rasterizer.c
tests/: test_coverage_rasterizer.c
